--- a/index.html
+++ b/index.html
@@ -7,7 +7,41 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,700&display=swap" rel="stylesheet">
 </head>  
 <body class='body'>
-    
+    <div class='calculator'>
+        <div class='screen'>
+            <p class='text operation'>Operation</p>
+            <p class='text result'>Answer</p>
+        </div>
+        <div class='buttons'>
+            <button class='button'>Del</button>
+            <button class='button main'>CE</button>
+            <button class='button main'>C</button>
+            <button class='button operator'>/</button>
+        </div>
+        <div class='buttons'>
+            <button class='button'>7</button>
+            <button class='button'>8</button>
+            <button class='button'>9</button>
+            <button class='button operator'>x</button>
+        </div>
+        <div class='buttons'>
+            <button class='button'>4</button>
+            <button class='button'>5</button>
+            <button class='button'>6</button>
+            <button class='button operator'>-</button>
+        </div>
+        <div class='buttons'>
+            <button class='button'>1</button>
+            <button class='button'>2</button>
+            <button class='button'>3</button>
+            <button class='button operator'>+</button>
+        </div>
+        <div class='buttons'>
+            <button class='button' id='cero'>0</button>
+            <button class='button'>.</button>
+            <button class='button operator' id='equal'>=</button>
+        </div>
+    </div>
 <script src="script.js">  
 </script>  
 </body>  
